--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
-    "vite": "^4.1.4"
+    "unplugin-auto-import": "^0.6.9",
+    "vite": "^4.1.4",
+    "vite-auto-import-resolvers": "^3.0.5"
   }
 }
