--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "vue": "^3.2.47",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2"
@@ -20,6 +24,7 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "sass": "^1.60.0",
     "unplugin-auto-import": "^0.6.9",
     "vite": "^4.1.4",
     "vite-auto-import-resolvers": "^3.0.5"
