--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "moment": "^2.29.4",
+    "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
+    "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
