--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
-    "vue3-cookies": "^1.0.6",
-    "vuex": "^4.0.2"
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
