--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
     "vue3-cookies": "^1.0.6"
