--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prettier": "2.8.8",
     "sass": "^1.60.0",
     "unplugin-auto-import": "^0.6.9",
-    "vite": "^4.1.4",
+    "vite": "4.1.5",
     "vite-auto-import-resolvers": "^3.0.5"
   }
 }
