--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.4",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
@@ -25,10 +23,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.7",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "sass": "^1.60.0",
+    "tailwindcss": "^3.3.2",
     "unplugin-auto-import": "^0.6.9",
     "vite": "4.1.5",
     "vite-auto-import-resolvers": "^3.0.5"
