--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.3.2",
     "unplugin-auto-import": "^0.6.9",
     "vite": "4.1.5",
-    "vite-auto-import-resolvers": "^3.0.5"
+    "vite-auto-import-resolvers": "^3.0.5",
+    "vite-plugin-vue-devtools": "^0.4.14"
   }
 }
