--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
