--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "tsc": "vue-tsc",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
