--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ts-node": "^10.9.1",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
+    "vue-countup-v3": "^1.4.0",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
