--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.35",
     "sweetalert2": "^11.7.31",
     "ts-node": "^10.9.1",
+    "v-calendar": "^3.1.2",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-countup-v3": "^1.4.0",
