--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.5.0",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
+    "gsap": "^3.12.3",
     "moment": "^2.29.4",
     "pinia": "^2.0.35",
     "sweetalert2": "^11.7.31",
