--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "@vueuse/core": "^10.5.0",
-    "aos": "^2.3.4",
     "axios": "^1.3.4",
     "gsap": "^3.12.3",
     "moment": "^2.29.4",
@@ -23,7 +22,6 @@
     "v-calendar": "^3.1.2",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
-    "vue-countup-v3": "^1.4.0",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
@@ -44,8 +42,7 @@
     "sass": "^1.60.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.6.9",
-    "vite": "4.1.5",
-    "vite-auto-import-resolvers": "^3.0.5"
+    "unplugin-auto-import": "^0.17.2",
+    "vite": "4.1.5"
   }
 }
