--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.2",
-    "vite": "4.1.5"
+    "vite": "4.1.5",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
